--- a/xlang/php/composer.json
+++ b/xlang/php/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=7.0",
         "felixfbecker/language-server": "^4.1.2",
-        "composer/composer": "dev-public-add-plugin",
+        "composer/composer": "^1.3.1",
         "sabre/event": "^5.0",
         "hirak/prestissimo": "^0.3.5"
     },
@@ -33,10 +33,6 @@
                     "reference": "master"
                 }
             }
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/felixfbecker/composer"
         }
     ],
     "minimum-stability": "dev",
