xlang-tsjs: update Dockerfile

--- a/xlang/javascript-typescript/Dockerfile
+++ b/xlang/javascript-typescript/Dockerfile
@@ -5,6 +5,7 @@ FROM node:6.9-slim
 ADD buildserver/src /buildserver/src
 ADD buildserver/lib /buildserver/lib
 ADD buildserver/node_modules /buildserver/node_modules
+ADD buildserver/package.json /buildserver/package.json
 
 WORKDIR /buildserver
 EXPOSE 2088
