--- a/ui/package.json
+++ b/ui/package.json
@@ -57,14 +57,13 @@
     "autotrack": "1.0.3",
     "classnames": "2.2.5",
     "core-js": "2.4.1",
+    "date-fns": "^1.27.0",
     "glamor": "2.20.8",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.17.2",
-    "moment": "^2.17.0",
     "raven-js": "3.8.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
-    "react-icons": "2.2.1",
     "react-relay": "0.9.3",
     "react-router": "3.0.0",
     "react-router-scroll": "0.4.1",
