--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "@types/whatwg-fetch": "0.0.32",
     "autobind-decorator": "^1.3.4",
     "autoprefixer": "6.5.3",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-relay-plugin": "0.9.3",
     "css-loader": "0.25.0",
     "expect.js": "0.3.1",
@@ -41,7 +42,6 @@
     "redbox-react": "1.3.3",
     "source-map-support": "0.4.6",
     "style-loader": "0.13.1",
-    "ts-loader": "^1.3.3",
     "tslint": "^4.1.1",
     "tslint-react": "^2.2.0",
     "typed-css-modules": "0.1.13",
