--- a/ui/package.json
+++ b/ui/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
+    "@types/bluebird": "^3.0.37",
     "autotrack": "1.0.3",
     "classnames": "2.2.5",
     "core-js": "2.4.1",
