--- a/ui/package.json
+++ b/ui/package.json
@@ -54,7 +54,6 @@
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
-    "@types/bluebird": "^3.0.37",
     "autotrack": "1.0.3",
     "classnames": "2.2.5",
     "core-js": "2.4.1",
@@ -68,6 +67,7 @@
     "react-relay": "0.9.3",
     "react-router": "3.0.0",
     "react-router-scroll": "0.4.1",
+    "rxjs-es": "^5.0.0-beta.12",
     "string_score": "0.1.22",
     "url": "0.11.0",
     "vscode-languageserver-types": "^1.0.4"
