--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@types/invariant": "2.2.28",
     "@types/lodash": "4.14.39",
     "@types/mocha": "2.2.33",
+    "@types/object-hash": "^0.5.28",
     "@types/react": "0.14.48",
     "@types/react-addons-test-utils": "0.14.15",
     "@types/react-dom": "0.14.18",
@@ -61,6 +62,7 @@
     "glamor": "2.20.8",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.17.2",
+    "object-hash": "^1.1.5",
     "raven-js": "3.8.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
