--- a/ui/package.json
+++ b/ui/package.json
@@ -37,6 +37,7 @@
     "postcss-loader": "1.1.1",
     "postcss-modules-values": "1.2.2",
     "progress-bar-webpack-plugin": "1.9.0",
+    "raw-loader": "^0.5.1",
     "react-addons-perf": "15.3.2",
     "react-addons-test-utils": "15.3.2",
     "source-map-support": "0.4.6",
