ci: docker-images can build individual xlang images (#3504)
* ci: Convert docker-images to a bash script

I had serious hell getting a simple change working. Lets use something that
involves less magic for such a simple task.

* ci: Add support to build xlang-* specifically

This will allow us to only build a specific xlang image, rather than everything
(which seems to timeout currently).

--- a/circle.yml
+++ b/circle.yml
@@ -72,6 +72,8 @@ deployment:
   docker-images:
     branch: /docker-images\/.*/
     commands:
-      - make -f dev/ci/Makefile.docker ${CIRCLE_BRANCH:14} TAG=$LONG_VERSION:
+      - ./dev/ci/docker-images.sh ${CIRCLE_BRANCH:14}:
           pwd: $REPO
+          environment:
+            TAG: ${LONG_VERSION}
       - curl http://deploy-bot.sourcegraph.com/set-branch-version -F "token=$DEPLOY_BOT_TOKEN" -F "branch=$CIRCLE_BRANCH" -F "version=$LONG_VERSION" -F "user=$CIRCLE_USERNAME"
