--- a/xlang/Makefile
+++ b/xlang/Makefile
@@ -1,6 +1,9 @@
-.PHONY: all lsp-proxy xlang-go xlang-javascript-typescript xlang-php xlang-java deploy deploy-staging
+TARGETS=lsp-proxy xlang-go xlang-javascript-typescript xlang-php xlang-java
 
-all: lsp-proxy xlang-go xlang-javascript-typescript xlang-php xlang-java
+default:
+	@echo Please specify a target: $(TARGETS)
+
+all: $(TARGETS)
 
 lsp-proxy:
 	cmd/lsp-proxy/build.sh
@@ -28,3 +31,5 @@ deploy:
 # environments.
 deploy-staging: all
 	for ns in staging staging2 staging3 staging4; do echo $$ns:; kubectl --namespace=$$ns get pods -o name | grep -E '(lsp-proxy|xlang-go|xlang-typescript)' | xargs kubectl --namespace=$$ns delete; echo; done
+
+.PHONY: all $(TARGETS) deploy deploy-staging
