Add ts lint rule no implicit returns (#3739)

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -22,7 +22,8 @@
     "strictNullChecks": true,
     "experimentalDecorators": true,
     "noUnusedLocals": true,
-    "noEmit": true
+    "noEmit": true,
+    "noImplicitReturns": true
   },
   "exclude": [
     "node_modules",
