Add support for extensions written using the vscode extension API (#3659)
This PR enables us to add existing vscode extensions (that use browser APIs only) to Sourcegraph by adding them to the ui/web_modules/sourcegraph/ext/host.tsx file as described:

// To import and activate a vscode extension, add the following to this file:
//
//   import { activate } from "path/to/extension";
//   activate();
This PR does NOT actually include any extensions. The first extensions will be added later and will likely be vscode-languageclient (for LSP support) and vscode-zap (for the zap dogfooding).

* add support for extensions written using the vscode extension API

* ui: fix #3692

* ui: factor out isWebWorker

* ui: remove needless cast

* ui: group imports

* ui: remove unnecessary

* ui: remove instantiationService override, use static global require instead

* ui: note why we delete things

* ui: add self type

* address review comments

* add more docs

* ui: handle when oldModel is null (occurs when clicking between files and away from the code view)

* ui: fix issue where global.require was being overwritten by the init/worker.tsx module

If you navigated between repos, this would cause a "global.require is not a function" JS console error.

* log, do not throw error, if browsing to multiple workspaces in same session

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -14,6 +14,7 @@
     "lib": ["es2016", "dom"],
     "types": [
         "mocha", "lodash", "flux/utils",
+        "../vendor/node_modules/vscode/src/vs/vscode",
         "../vendor/node_modules/vscode/src/vs/monaco"
     ],
     "jsx": "react",
