Zap integration with Sourcegraph (#2655)
* govendor

* zap UI

* Pass tmpZapRef in query string to get zap commit rev (#3756)

* enable zap selections

* use better webSocketStreamOpener from LSP extension

* remove erroneous dupe in vendor

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -9,7 +9,9 @@
         "vs/*": ["vendor/node_modules/vscode/src/vs/*"],
         "vscode/src/vs/*": ["vendor/node_modules/vscode/src/vs/*"],
         "monaco-languages/*": ["vendor/node_modules/monaco-languages/*"],
-        "monaco-typescript/*": ["vendor/node_modules/monaco-languages/*"]
+        "monaco-typescript/*": ["vendor/node_modules/monaco-languages/*"],
+        "libzap/lib/*": ["libzap/src/*"],
+        "vscode-zap/out/src/*": ["vscode-zap/src/*"]
     },
     "lib": ["es2016", "dom"],
     "types": [
