--- a/ui/package.json
+++ b/ui/package.json
@@ -60,6 +60,7 @@
     "date-fns": "^1.27.0",
     "glamor": "2.20.8",
     "isomorphic-fetch": "2.2.1",
+    "libzap": "^0.0.27",
     "lodash": "4.17.2",
     "object-hash": "^1.1.5",
     "raven-js": "3.8.1",
@@ -73,7 +74,8 @@
     "url": "0.11.0",
     "vscode-jsonrpc": "3.0.3",
     "vscode-languageclient": "https://registry.npmjs.org/@sourcegraph/vscode-languageclient/-/vscode-languageclient-3.0.3-fork1.tgz",
-    "vscode-languageserver-types": "3.0.3"
+    "vscode-languageserver-types": "3.0.3",
+    "vscode-zap": "^0.0.27"
   },
   "scripts": {
     "start": "NODE_ENV=${NODE_ENV:=development} node ./node_modules/.bin/webpack-dev-server",
@@ -187,6 +189,8 @@
     "xtend": "4.0.1",
     "@types/history": "2.0.41",
     "vscode-jsonrpc": "3.0.3",
-    "vscode-languageserver-types": "3.0.3"
+    "vscode-languageserver-types": "3.0.3",
+    "vscode-zap": "0.0.5",
+    "libzap": "0.0.8"
   }
 }
