refactor: xlang minor codeshuffle (#3868)
* ci: Only install src once

* dev: Only install needed cmds in serve-dev

We don't need to install src, which is generally slower to compile and is also
compiled by rego.

* xlang: mv lsp-proxy and xlang-go cmd to top-level

Now all `package main` are under the top-level cmd.

* golang: mv scripts into buildserver dir

* xlang: mvpkg ./xlang/golang/buildserver to ./xlang/gobuildserver

This removes a nested dir + changes the buildserver pkg to the name it is
usually aliased to when imported.

--- a/xlang/Makefile
+++ b/xlang/Makefile
@@ -6,10 +6,10 @@ default:
 all: $(TARGETS)
 
 lsp-proxy:
-	cmd/lsp-proxy/build.sh
+	../cmd/lsp-proxy/build.sh
 
 xlang-go:
-	golang/cmd/xlang-go/build.sh
+	../cmd/xlang-go/build.sh
 
 xlang-javascript-typescript:
 	javascript-typescript/build.sh
