--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@types/classnames": "0.0.32",
     "@types/fbemitter": "2.0.32",
     "@types/flux": "0.0.33",
+    "@types/google.analytics": "0.0.28",
     "@types/history": "^2.0.41",
     "@types/invariant": "2.2.28",
     "@types/lodash": "4.14.39",
