--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -51,6 +51,7 @@
 		"react-dom": "^0.14.7",
 		"react-icon-base": "^2.0.0",
 		"telligent-tracker": "^0.1.2",
-		"typestyle": "^0.7.4"
+		"typestyle": "^0.7.4",
+		"utf8": "^2.1.2"
 	}
 }
