Part two of the great phabricator refactor (#4153)
* phab: extract out event logger

* phab: create different background apps

* phab: extract lsp

* ext: remove excess code from BlobAnnootator

* ext: moved CodeCell to utils, since its not GitHub specific

* ext: fix blob expander bug and unit tests

* ext: remove unused getSourcegraphBlobUrl

* ext: remove isXUrl functions in favor of getDomain()

* ext: extract out the Sourcegraph url from code

* ext: cleanup GitHubBackground

* ext: create a TelligentWrapper for the tracker to use

* ext: better documentation in storage.tsx

* ext: cleanup entry into chrome extension

* ext: fix formatting

* ext: fix missing function

* ext: remove circular dependency

* ext: changes requested in PR

* ext: changes requested in pr

* ext: single arg parens

* ext: add back unit tests, remove from CI, and add to deploy

* ext: force event logger to be defined

--- a/client/browser-ext/Makefile
+++ b/client/browser-ext/Makefile
@@ -43,5 +43,5 @@ clean:
 	rm -rf build/ dev/ .checksum node_modules/ chrome-bundle.zip firefox-bundle.xpi
 
 export CHROME_BUNDLE ?= $(shell pwd)/chrome-bundle.zip
-deploy: clean bundle deploy-e2e
+deploy: clean bundle test-unit deploy-e2e
 	./deploy.sh
