--- a/circle.yml
+++ b/circle.yml
@@ -67,14 +67,14 @@ deployment:
       - echo $LONG_VERSION | gsutil cp - gs://sourcegraph-metadata/latest-successful-build
 
   staging-branch:
-    branch: [staging, staging2, staging3, staging4]
+    branch: /staging\/.*/
     commands:
       - ./cmd/src/build.sh:
           pwd: $REPO
           environment:
             TAG: ${LONG_VERSION}
       - gcloud docker -- push us.gcr.io/sourcegraph-dev/sourcegraph:$LONG_VERSION
-      - curl http://deploy-bot.sourcegraph.com/set-branch-version -F "token=$DEPLOY_BOT_TOKEN" -F "branch=$CIRCLE_BRANCH" -F "version=$LONG_VERSION" -F "user=$CIRCLE_USERNAME"
+      - curl http://staging.sgdev.org/set-branch-version -F "token=$DEPLOY_BOT_TOKEN" -F "branch=$CIRCLE_BRANCH" -F "version=$LONG_VERSION" -F "user=$CIRCLE_USERNAME"
 
   docker-images:
     branch: /docker-images\/.*/
