--- a/ui/package.json
+++ b/ui/package.json
@@ -55,7 +55,8 @@
     "webpack-dev-server": "2.2.0"
   },
   "dependencies": {
-    "@sourcegraph/vscode-languageclient": "3.0.3-fork2",
+    "@sourcegraph/vscode-jsonrpc": "3.0.4-patch",
+    "@sourcegraph/vscode-languageclient": "3.0.4-patch2",
     "autotrack": "1.0.3",
     "classnames": "2.2.5",
     "core-js": "2.4.1",
@@ -74,7 +75,6 @@
     "rxjs": "^5.0.3",
     "string_score": "0.1.22",
     "url": "0.11.0",
-    "vscode-jsonrpc": "3.0.3",
     "vscode-languageserver-types": "3.0.3",
     "vscode-zap": "^0.0.52"
   },
