Reenable TS/JS buildserver tests (#3971)
* Reenable TS/JS buildserver tests

* Enable tests in run-tests.sh

* Add yarnshim-test cache

--- a/circle.yml
+++ b/circle.yml
@@ -31,6 +31,9 @@ dependencies:
     - ~/cache
     - ~/.cache/yarn
     - ~/bin
+    # TS/JS build server yarn caches to avoid test flakiness
+    - /tmp/tsjs-yarn-global/.cache
+    - /tmp/yarnshim-test/.cache
 
   override:
     - ./dev/ci/install-go.sh
