--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -2,10 +2,11 @@
     "version": "0.0.1",
     "name": "javascript-typescript-buildserver",
     "scripts": {
-        "fmt-check": "./node_modules/.bin/tsfmt --verify",
-        "fmt": "./node_modules/.bin/tsfmt -r",
-        "test": "./node_modules/.bin/mocha -r ts-node/register src/test/**/*.ts && node ./lib/yarnshim-test.js",
-        "test-ls": "./node_modules/.bin/mocha -r ts-node/register src/test/**/*.ts",
+        "build": "tsc -p . && chmod +x lib/language-server-stdio.js lib/language-server.js",
+        "fmt-check": "tsfmt --verify",
+        "fmt": "tsfmt -r",
+        "test": "mocha -r ts-node/register src/test/**/*.ts && node ./lib/yarnshim-test.js",
+        "test-ls": "mocha -r ts-node/register src/test/**/*.ts",
         "test-yarnshim": "node ./lib/yarnshim-test.js"
     },
     "dependencies": {
