--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,10 @@
     "autobind-decorator": "^1.3.4",
     "autoprefixer": "6.5.3",
     "awesome-typescript-loader": "^3.0.0-beta.18",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-es2015-for-of": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-relay-plugin": "0.9.3",
     "css-loader": "0.25.0",
     "expect.js": "0.3.1",
@@ -193,6 +197,10 @@
     "vscode-jsonrpc": "3.0.3",
     "vscode-languageserver-types": "3.0.3",
     "vscode-zap": "0.0.5",
-    "libzap": "0.0.8"
+    "libzap": "0.0.8",
+    "babel-runtime": "6.23.0",
+    "js-tokens": "3.0.1",
+    "babel-code-frame": "6.22.0",
+    "jsesc": "1.3.0"
   }
 }
