buildkite: fix golang plugin version in init-pipeline

--- a/dev/ci/init-pipeline.yml
+++ b/dev/ci/init-pipeline.yml
@@ -2,5 +2,5 @@ steps:
   - command: "go run ./dev/ci/gen-pipeline.go | buildkite-agent pipeline upload"
     label: ":pipeline:"
     plugins:
-      golang#v0.2:
+      golang#alternative-alternative-approach:
         import: sourcegraph.com/sourcegraph/sourcegraph
