--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -43,7 +43,7 @@
 	"dependencies": {
 		"autobind-decorator": "^1.3.4",
 		"bluebird": "^3.3.4",
-		"html-truncate": "^1.2.1",
+		"html-truncate": "1.2.2",
 		"immutability-helper": "^2.1.1",
 		"lodash": "^4.11.2",
 		"marked": "^0.3.6",
