Add the umami repository mapping to the phabricator integration (#4589)
* ext: add umami configuration

* phab: update phabricator assets

--- a/client/browser-ext/Makefile
+++ b/client/browser-ext/Makefile
@@ -12,8 +12,11 @@ bundle: build
 	zip -r chrome-bundle.zip build/*
 	cd build && zip -r ../firefox-bundle.xpi *
 
-phabricator: build
-	cp build/js/phabricator.bundle.js ../../ui/assets/scripts
+phabricator: clean build
+	cp build/js/umami.bundle.js ../../ui/assets/scripts/phabricator.bundle.js
+	cp build/js/umami.bundle.js.map ../../ui/assets/scripts/umami.bundle.js.map
+	cp build/js/sgdev.bundle.js ../../ui/assets/scripts/sgdev.bundle.js
+	cp build/js/sgdev.bundle.js.map ../../ui/assets/scripts/sgdev.bundle.js.map
 
 test-unit:
 	yarn run test
