remove zap feature flag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"typescript.tsdk": "./ui/node_modules/typescript/lib",
-	"tslint.nodePath": "./ui/node_modules"
+	"tslint.nodePath": "./ui/node_modules",
+	"zap.enable": true
 }
