Revert "remove zap feature flag"
This reverts commit 59dce1309603d5b6ab5d27a666366eaf05154a8b.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
 	"typescript.tsdk": "./ui/node_modules/typescript/lib",
-	"tslint.nodePath": "./ui/node_modules",
-	"zap.enable": true
+	"tslint.nodePath": "./ui/node_modules"
 }
