--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -5,31 +5,34 @@
         "build": "tsc -p . && chmod +x lib/language-server-stdio.js lib/language-server.js",
         "fmt-check": "tsfmt --verify",
         "fmt": "tsfmt -r",
-        "test": "mocha -r ts-node/register src/test/**/*.ts && node ./lib/yarnshim-test.js",
-        "test-ls": "mocha -r ts-node/register src/test/**/*.ts",
+        "test": "mocha lib/test/**/*.js && node ./lib/yarnshim-test.js",
         "test-yarnshim": "node ./lib/yarnshim-test.js"
     },
     "dependencies": {
-        "@types/chai": "^3.4.34",
-        "@types/mkdirp": "^0.3.29",
-        "@types/mocha": "^2.2.33",
-        "@types/rimraf": "^0.0.28",
-        "@types/temp": "^0.8.29",
+        "bluebird": "^3.4.7",
         "chai": "^3.4.34",
         "commander": "^2.9.0",
-        "javascript-typescript-langserver": "^1.3.1",
+        "javascript-typescript-langserver": "^2.0.0-pre.5",
+        "lodash": "^4.17.4",
         "mkdirp": "^0.5.1",
         "proper-lockfile": "^2.0.0",
         "rimraf": "^2.5.4",
         "semver": "^5.3.0",
         "temp": "^0.8.3",
-        "typescript": "2.1.1",
-        "vscode-languageserver": "^2.6.2",
+        "typescript": "2.2.1",
+        "vscode-languageserver": "^3.1.0",
         "yarn": "v0.18.0"
     },
     "devDependencies": {
+        "@types/chai": "3.4.34",
+        "@types/lodash": "4.14.53",
+        "@types/mkdirp": "0.3.29",
+        "@types/mocha": "2.2.33",
+        "@types/rimraf": "0.0.28",
+        "@types/temp": "0.8.29",
         "mocha": "^2.2.33",
-        "ts-node": "^1.6.1",
+        "source-map-support": "^0.4.11",
+        "tslint": "^4.5.1",
         "typescript-formatter": "^4.0.1"
     }
 }
