--- a/xlang/javascript-typescript/buildserver/tsconfig.json
+++ b/xlang/javascript-typescript/buildserver/tsconfig.json
@@ -1,19 +1,20 @@
 {
-    "compilerOptions": {
-        "target": "ES6",
-        "lib": ["es2016"],
-        "types": ["node", "mocha", "chai"],
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "lib",
+	"compilerOptions": {
+		"target": "es2016",
+		"lib": [
+			"es2016"
+		],
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"sourceMap": true,
+		"outDir": "lib",
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noImplicitAny": true
-    },
-    "exclude": [
-        "node_modules"
-    ]
+	},
+	"include": [
+		"src/**/*.ts"
+	]
 }
