Fix unicode problems on chrome extension, and polyfill fetch for Safari code (#4735)
* ext: fix unicode problem by changing tokenizer regex

* ext: include fetch polyfill for Safari support

* on-prem: correct comment position

--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -52,6 +52,6 @@
 		"react-icon-base": "^2.0.0",
 		"telligent-tracker": "^0.1.2",
 		"typestyle": "^0.7.4",
-		"utf8": "^2.1.2"
+		"whatwg-fetch": "^2.0.3"
 	}
 }
