Revert "xlang/java: add $LANGSERVER_OPT config point to Dockerfile"
This reverts commit 5b145c77ccc730822d29546afb41793eafdd1fe1.

--- a/xlang/java/docker/Dockerfile
+++ b/xlang/java/docker/Dockerfile
@@ -5,4 +5,4 @@ EXPOSE 2088
 COPY ./artifacts /root/.java-langserver/artifacts
 COPY ./java-language-server.jar /usr/bin
 
-CMD java $JVM_OPT -jar /usr/bin/java-language-server.jar $LANGSERVER_OPT
+CMD java $JVM_OPT -jar /usr/bin/java-language-server.jar
