--- a/dev/Procfile
+++ b/dev/Procfile
@@ -1,6 +1,7 @@
 webpack: curl -Ss -o /dev/null "$WEBPACK_DEV_SERVER_URL" || (cd ui && yarn && yarn run start)
 gitserver: .bin/gitserver
 indexer: .bin/indexer
+searcher: .bin/searcher
 github-proxy: .bin/github-proxy
 zap: .bin/zap
 lsp-proxy: .bin/lsp-proxy -prof-http=:6061
