TS: Improve tempdir cleanup (#5001)
* Improve tempdir cleanup

- Tempdir to use is passed in options
- Workers get their own directories
- On worker crash, its directory is deleted
- Add test for cleanup on shutdown

* Decrease cluster size to 8

--- a/xlang/javascript-typescript/Dockerfile
+++ b/xlang/javascript-typescript/Dockerfile
@@ -9,4 +9,4 @@ ADD buildserver/package.json /buildserver/package.json
 
 WORKDIR /buildserver
 EXPOSE 2088
-CMD ["node", "--max_old_space_size=4096", "./lib/language-server.js", "-p", "2088", "--strict"]
+CMD ["node", "--max_old_space_size=4096", "./lib/language-server.js", "-p", "2088", "--strict", "--cluster", "8"]
