--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -12,14 +12,15 @@
         "bluebird": "^3.4.7",
         "chai": "^3.4.34",
         "commander": "^2.9.0",
-        "javascript-typescript-langserver": "^2.0.0-pre.5",
+        "javascript-typescript-langserver": "^2.0.0-pre.6",
         "lodash": "^4.17.4",
         "mkdirp": "^0.5.1",
+        "mz": "^2.6.0",
         "proper-lockfile": "^2.0.0",
         "rimraf": "^2.5.4",
         "semver": "^5.3.0",
-        "temp": "^0.8.3",
         "typescript": "2.2.1",
+        "uuid": "^3.0.1",
         "vscode-languageserver": "^3.1.0",
         "yarn": "v0.18.0"
     },
@@ -28,8 +29,10 @@
         "@types/lodash": "4.14.53",
         "@types/mkdirp": "0.3.29",
         "@types/mocha": "2.2.33",
+        "@types/mz": "0.0.30",
         "@types/rimraf": "0.0.28",
         "@types/temp": "0.8.29",
+        "@types/uuid": "2.0.29",
         "mocha": "^2.2.33",
         "source-map-support": "^0.4.11",
         "tslint": "^4.5.1",
