add android sdk to xlang-java docker image

--- a/xlang/java/docker/Dockerfile
+++ b/xlang/java/docker/Dockerfile
@@ -3,6 +3,10 @@ MAINTAINER Aaron Leung <the.other.aaron@sourcegraph.com>
 EXPOSE 2088
 
 COPY ./artifacts /root/.java-langserver/artifacts
+
+COPY ./android-sdk-jars/android-25 /root/android-25
+ENV ANDROID_JAR_PATH /root/android-25/android.jar
+
 COPY ./java-language-server.jar /usr/bin
 
 CMD java $JVM_OPT -jar /usr/bin/java-language-server.jar
