xlang-java: update Dockerfile and build.sh to include Android support libs

--- a/xlang/java/docker/Dockerfile
+++ b/xlang/java/docker/Dockerfile
@@ -4,8 +4,11 @@ EXPOSE 2088
 
 COPY ./artifacts /root/.java-langserver/artifacts
 
-COPY ./android-sdk-jars/android-25 /root/android-25
-ENV ANDROID_JAR_PATH /root/android-25/android.jar
+COPY ./android-sdk-jars/platforms/android-25 /root/android-sdk/platforms/android-25
+COPY ./android-sdk-jars/extras /root/android-sdk/extras
+ENV ANDROID_JAR_PATH /root/android-sdk/platforms/android-25/android.jar
+ENV ANDROID_SUPPORT_HOME /root/android-sdk/extras/android/m2repository/com/android/support
+ENV ANDROID_GOOGLE_HOME /root/android-sdk/extras/google/m2repository/com/google/android/support/wearable
 
 COPY ./java-language-server.jar /usr/bin
 
