moved schema.json from api to client directory

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -24,7 +24,7 @@
         "./web_modules/@types"
     ],
     "jsx": "react",
-    "relaySchema": "../api/schema.json",
+    "relaySchema": "../client/schema.json",
     "sourceMap": true,
     "strictNullChecks": true,
     "experimentalDecorators": true,
