unified way to build docker imaged on CI

--- a/xlang/Makefile
+++ b/xlang/Makefile
@@ -1,15 +1,9 @@
-TARGETS=lsp-proxy xlang-go xlang-javascript-typescript xlang-php xlang-java
+TARGETS=xlang-javascript-typescript xlang-php xlang-java
 
 default:
 	@echo Please specify a target: $(TARGETS)
 
 all: $(TARGETS)
-
-lsp-proxy:
-	../cmd/lsp-proxy/build.sh
-
-xlang-go:
-	../cmd/xlang-go/build.sh
 
 xlang-javascript-typescript:
 	javascript-typescript/build.sh
@@ -20,17 +14,3 @@ xlang-php:
 xlang-java:
 	@echo Java build disabled since repo is now private. If you want to build, please manually run
 	@echo java/build.sh
-
-deploy:
-	@echo "This is deprecated. To update staging environments use the deploy-staging target."
-	@echo "Otherwise, just use:"
-	@echo
-	@echo "  git push origin -f master:docker-images/xlang"
-	@echo
-
-# Update the Docker images used for lsp-proxy or xlang-* on all staging
-# environments.
-deploy-staging: all
-	for ns in staging staging2 staging3 staging4; do echo $$ns:; kubectl --namespace=$$ns get pods -o name | grep -E '(lsp-proxy|xlang-go|xlang-typescript)' | xargs kubectl --namespace=$$ns delete; echo; done
-
-.PHONY: all $(TARGETS) deploy deploy-staging
