--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -5,24 +5,24 @@
         "build": "tsc -p . && chmod +x lib/language-server-stdio.js lib/language-server.js",
         "fmt-check": "tsfmt --verify",
         "fmt": "tsfmt -r",
-        "test": "mocha lib/test/**/*.js && node ./lib/yarnshim-test.js",
-        "test-yarnshim": "node ./lib/yarnshim-test.js"
+        "test": "mocha lib/test/**/*.js"
     },
     "dependencies": {
         "bluebird": "^3.4.7",
         "chai": "^3.4.34",
         "commander": "^2.9.0",
-        "javascript-typescript-langserver": "^2.0.0-pre.7",
+        "iterare": "^0.0.7",
+        "javascript-typescript-langserver": "^2.0.0-pre.8",
         "lodash": "^4.17.4",
         "mkdirp": "^0.5.1",
         "mz": "^2.6.0",
-        "proper-lockfile": "^2.0.0",
         "rimraf": "^2.5.4",
         "semver": "^5.3.0",
         "typescript": "2.2.1",
+        "url-relative": "^1.0.0",
         "uuid": "^3.0.1",
         "vscode-languageserver": "^3.1.0",
-        "yarn": "v0.18.0"
+        "yarn": "^0.22.0"
     },
     "devDependencies": {
         "@types/chai": "3.4.34",
