--- a/xlang/javascript-typescript/Dockerfile
+++ b/xlang/javascript-typescript/Dockerfile
@@ -2,6 +2,11 @@
 
 FROM node:7-alpine
 
+# Allow to mount a custom yarn config
+RUN mkdir /yarn-config \
+	&& touch /yarn-config/.yarnrc \
+	&& ln -s /yarn-config/.yarnrc ~/.yarnrc
+
 # Add git, needed for yarn
 RUN apk add --no-cache bash git openssh
 
